[metadata]
name = ceph-commands
author = sam sun
author-email = asdfsx@gmail.com
summary = An simple ceph tool for collecting ceph informations
description-file = README.md
home-page = https://github.com/asdfsx/ceph-commands
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python :: 2.7
keywords =
    setup
    distutils
[files]
packages =
    ceph-commands
data_files =
    etc/ = etc/*
[entry_points]
console_scripts =
    ceph-commands=ceph_commands.cmd:main

